// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTransitionStyles Get a correct in/out transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.9s 0.2s ease-out, border-radius 0.9s 0.2s ease-out, top 0.9s 0.2s ease-out, left 0.9s 0.2s ease-out, box-shadow 0.3s 0s ease",
      },
    },
  },
  " > .maxi-background-displayer": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.9s 0.2s ease-out, border-radius 0.9s 0.2s ease-out, top 0.9s 0.2s ease-out, left 0.9s 0.2s ease-out",
      },
    },
  },
  " > .maxi-background-displayer > div": Object {
    "transition": Object {
      "general": Object {
        "transition": "all 0s 0s",
      },
    },
  },
  " > .maxi-background-displayer > div > svg": Object {
    "transition": Object {
      "general": Object {
        "transition": "all 0s 0s",
      },
    },
  },
  " > .maxi-background-displayer:hover": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
    },
  },
  ":hover": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease, box-shadow 0.3s 0s ease",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct responsive in/out transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 1.8s 1s ease-in-out, border-radius 1.8s 1s ease-in-out, top 1.8s 1s ease-in-out, left 1.8s 1s ease-in-out, box-shadow 0s 0s",
      },
      "l": Object {
        "transition": "border 1.7s 0.9s ease-out, border-radius 1.7s 0.9s ease-out, top 1.7s 0.9s ease-out, left 1.7s 0.9s ease-out, box-shadow 0.4s 0.1s ease-in",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out, box-shadow 1.6s 0.8s ease-in",
      },
      "s": Object {
        "transition": "border 1.5s 0.7s linear, border-radius 1.5s 0.7s linear, top 1.5s 0.7s linear, left 1.5s 0.7s linear, box-shadow 1.5s 0.7s linear",
      },
      "xs": Object {
        "transition": "border 1.4s 0.6s ease-in-out, border-radius 1.4s 0.6s ease-in-out, top 1.4s 0.6s ease-in-out, left 1.4s 0.6s ease-in-out, box-shadow 0s 0s",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 1.3s 0.5s linear",
      },
    },
  },
  " > .maxi-background-displayer": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 1.8s 1s ease-in-out, border-radius 1.8s 1s ease-in-out, top 1.8s 1s ease-in-out, left 1.8s 1s ease-in-out",
      },
      "l": Object {
        "transition": "border 1.7s 0.9s ease-out, border-radius 1.7s 0.9s ease-out, top 1.7s 0.9s ease-out, left 1.7s 0.9s ease-out",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "border 1.5s 0.7s linear, border-radius 1.5s 0.7s linear, top 1.5s 0.7s linear, left 1.5s 0.7s linear",
      },
      "xs": Object {
        "transition": "border 1.4s 0.6s ease-in-out, border-radius 1.4s 0.6s ease-in-out, top 1.4s 0.6s ease-in-out, left 1.4s 0.6s ease-in-out",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
    },
  },
  " > .maxi-background-displayer:hover": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
    },
  },
  ":hover": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease, box-shadow 0s 0s",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.4s 0.1s ease-in",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out, box-shadow 0s 0s",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.6s 0.3s ease-in-out",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear, box-shadow 0s 0s",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.8s 0.5s ease-in-out",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct responsive transform(mixed with others) transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "transform 0.3s 0s ease",
      },
      "l": Object {
        "transition": "transform 0s 0s",
      },
      "m": Object {
        "transition": "transform 0.5s 0.2s ease-out",
      },
      "xxl": Object {
        "transition": "transform 0s 0s",
      },
    },
  },
  " .block-class": Object {
    "transition": Object {
      "m": Object {
        "transition": "transform 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "transform 0s 0s",
      },
      "xs": Object {
        "transition": "transform 0.7s 0.4s linear",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct responsive transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease, box-shadow 0s 0s",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.4s 0.1s ease-in",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out, box-shadow 0s 0s",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.6s 0.3s ease-in-out",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear, box-shadow 0s 0s",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0.8s 0.5s ease-in-out",
      },
    },
  },
  " > .maxi-background-displayer": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct responsive transition styles with custom transitionObj 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease, box-shadow 0.3s 0s ease",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0s 0s",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out, box-shadow 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0s 0s",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear, box-shadow 0.7s 0.4s linear",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s, box-shadow 0s 0s",
      },
    },
  },
  " .maxi-button-block__content": Object {
    "transition": Object {
      "general": Object {
        "transition": "all 0.3s 0s ease",
      },
      "l": Object {
        "transition": "all 0s 0s",
      },
      "m": Object {
        "transition": "all 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "all 0s 0s",
      },
      "xs": Object {
        "transition": "all 0.7s 0.4s linear",
      },
      "xxl": Object {
        "transition": "all 0s 0s",
      },
    },
  },
  " > .maxi-background-displayer": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
      "l": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "m": Object {
        "transition": "border 0.5s 0.2s ease-out, border-radius 0.5s 0.2s ease-out, top 0.5s 0.2s ease-out, left 0.5s 0.2s ease-out",
      },
      "s": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
      "xs": Object {
        "transition": "border 0.7s 0.4s linear, border-radius 0.7s 0.4s linear, top 0.7s 0.4s linear, left 0.7s 0.4s linear",
      },
      "xxl": Object {
        "transition": "border 0s 0s, border-radius 0s 0s, top 0s 0s, left 0s 0s",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct transform transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "transform 0.3s 0s ease",
      },
    },
  },
  " .block-class": Object {
    "transition": Object {
      "general": Object {
        "transition": "transform 0.3s 0s ease",
      },
    },
  },
}
`;

exports[`getTransitionStyles Get a correct transition styles 1`] = `
Object {
  "": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
    },
  },
  " > .maxi-background-displayer": Object {
    "transition": Object {
      "general": Object {
        "transition": "border 0.3s 0s ease, border-radius 0.3s 0s ease, top 0.3s 0s ease, left 0.3s 0s ease",
      },
    },
  },
  " > .maxi-background-displayer > div": Object {
    "transition": Object {
      "general": Object {
        "transition": "all 0s 0s",
      },
    },
  },
  " > .maxi-background-displayer > div > svg": Object {
    "transition": Object {
      "general": Object {
        "transition": "all 0s 0s",
      },
    },
  },
}
`;
